# bldc-motor-driver-stm32g4-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
src/: app.rs  bldc_motor_driver_stm32g4.rs  bldc_motor_driver_stspin32g4.rs  fsr.rs  g4test.rs  imu_fsr_stm32g4.rs  indicator.rs  led.rs  main.rs  periodic.rs  potensio.rs  some_interface.rs  three_phase_motor_driver.rs  xprintln.rs
