[package]
authors = ["kaede <kaede6120@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bldc-motor-driver-stm32g4"
version = "0.1.0"

[dependencies]
# embedded-hal = "0.2"
nb = "1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
defmt = "0.3"
defmt-rtt = "0.4"

# stm32g4xx-hal = "0.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

motml = { path = "../motml-rs/" }

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32g4]
features = ["stm32g431", "rt"]
version = "0.14.0"

# this lets you use `cargo fix`!
[[bin]]
name = "bldc-motor-driver-stm32g4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
